# SigGen

./: .gitignore  CMakeLists.txt  README.md
include/: SigGen.h  common.h  functions.h  lookup.h  noise.h  periodic.h
include/common/: _base_classes.h  base_classes.h  common.h  trig.h
include/lookup/: lookup.h  lookup_base.h
include/periodic/: common.h  trig.h
src/: CMakeLists.txt  SigGen.h  base_classes.cpp  base_classes.h  common.cpp  common_signals.cpp  common_signals.h  custom.cpp  custom.h  custom_lookup.cpp  custom_lookup.h  custom_signal.cpp  functions.h  lookup.h  lookup_base.cpp  lookup_base.h  lookup_custom.cpp  lookup_table.cpp  lookup_table.h  noise.h  periodic.cpp  periodic.h  signal_common.cpp  signal_common.h  signal_custom.cpp  signal_custom.h  signal_random.cpp  signal_random.h  signal_trig.cpp  signal_trig.h  trig.cpp  trig.h  trig_signals.cpp
src/common/: CMakeLists.txt  base_classes.cpp  common.cpp  trig.cpp
src/lookup/: CMakeLists.txt  lookup_base.cpp
src/periodic/: CMakeLists.txt  common.cpp  trig.cpp
test/: CMakeLists.txt  custom_lookup.cpp  custom_signal.cpp  lookup_table.cpp  signal_common.cpp  signal_custom.cpp  signal_random.cpp  signal_trig.cpp  test_common.cpp  test_trig.cpp
